# KHUSLA_copy

src/: README.md  arduino_serial_monitor.ino  gps_imu_calibration.py  imu_calibration_angle.txt  imu_yaw_converter.py  odometry_yaw_converter.py  utm_converter.py  waypoint_test
src/ROS2-PurePursuitControl-PathPlanning-Tracking/: UTM_PURE_PURSUIT_README.md
src/ROS2-PurePursuitControl-PathPlanning-Tracking/nav_controller/: README_PURE_PURSUIT_TEST.md  setup.py
src/ROS2-PurePursuitControl-PathPlanning-Tracking/nav_controller/launch/: pure_pursuit_test.launch.py  (+1 more)
src/camera_perception_pkg/camera_perception_pkg/: traffic_light_detector_node.py  yolov8_node.py
src/decision_making_pkg/decision_making_pkg/: motion_planner_node.py
src/global_to_utm_odometry/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/global_to_utm_odometry/global_to_utm_odometry/: global_to_utm_odometry.cpp
src/iAHRS_driver_ros2/iahrs_driver/: setup.cfg
src/interfaces_pkg/msg/: MotionCommand.msg
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: gps.launch.py  main.launch.py
src/lidar_perception_pkg/: package.xml
src/lidar_perception_pkg/lidar_perception_pkg/: __init__.py  lidar_processor_node.py  lidar_publisher_node.py
src/odom_pkg/: package.xml  setup.cfg  setup.py
src/odom_pkg/odom_pkg/: odom_from_ticks.py
src/robot_localization/launch/: dual_ekf_navsat_example.launch.py
src/robot_localization/params/: dual_ekf_navsat_example.yaml
src/robot_localization/src/: navsat_transform.cpp  ros_filter.cpp
src/serial_communication_pkg/serial_communication_pkg/: serial_sender_node.py
src/sketch_sep04a/: sketch_sep04a.ino
src/utm_odometry_converter/: package.xml  setup.py
src/utm_odometry_converter/launch/: utm_converter.launch.py
src/utm_odometry_converter/utm_odometry_converter/: utm_converter_node.py
(+8 files in other folders)
